<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/istblue"
        android:text="Back"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="667dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10ºC"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="246dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/threshold"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="231dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="101dp"
        android:layout_height="49dp"
        android:text="50ºC"
        android:textAlignment="center"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="261dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="59dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/istblue"
        android:text="+"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="336dp"
        tools:layout_editor_absoluteY="261dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="59dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/istblue"
        android:text="-"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="219dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/threshold"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="109dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sensor"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/istblue"
        android:text="Reset Values"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_editor_absoluteY="667dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="97dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Last 10 Aquisitions"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="344dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="datetime format"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="188dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="datetime format"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="310dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="50ºC"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="124dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="101dp"
        android:layout_height="49dp"
        android:text="50ºC"
        android:textAlignment="center"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="139dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="59dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/istblue"
        android:text="-"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="139dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="59dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/istblue"
        android:text="+"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="336dp"
        tools:layout_editor_absoluteY="139dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Switch"
        android:textAlignment="textEnd"
        tools:layout_editor_absoluteX="311dp"
        tools:layout_editor_absoluteY="234dp"
        tools:text="@string/alarm" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="311dp"
        tools:layout_editor_absoluteY="112dp"
        tools:text="@string/alarm" />

    <TableLayout
        android:layout_width="397dp"
        android:layout_height="288dp"
        android:background="#52191414"
        android:backgroundTint="#050505"
        android:backgroundTintMode="src_in"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="371dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="108dp"
        android:layout_height="62dp"
        app:srcCompat="@drawable/IST_Logo"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>